--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
             <div class="input-group">
                 <label>Enter your WhatsApp number:</label>
-                <input type="tel" id="phoneNumber" placeholder="923035512967 or 3035512967" maxlength="15">
+                <input type="tel" id="phoneNumber" placeholder="923035512967" maxlength="15">
                 <span class="input-hint">
                     <i class="fas fa-lightbulb"></i> Enter with or without country code
                 </span>
