--- a/index.html
+++ b/index.html
@@ -443,12 +443,12 @@
             </div>
 
             <div class="input-group">
-                <label>Enter your WhatsApp number:</label>
-                <input type="tel" id="phoneNumber" placeholder="923035512967" maxlength="15">
-                <span class="input-hint">
-                    <i class="fas fa-lightbulb"></i> Enter with or without country code
-                </span>
-            </div>
+    <label>Enter your WhatsApp number:</label>
+    <input type="tel" id="phoneNumber" placeholder="92303XXXXXXX" maxlength="15">
+    <span class="input-hint">
+        <i class="fas fa-lightbulb"></i> Enter with country code (e.g., 923035512967)
+    </span>
+</div>
 
             <button class="btn" id="generateBtn">
                 <i class="fas fa-key"></i> Generate Pairing Code
