--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
         .container { max-width: 450px; margin: 0 auto; }
 
-        /* --- FIXED HEADER SECTION --- */
-        .header { text-align: center; margin-bottom: 30px; padding: 20px; }
+        /* --- HEADER SECTION --- */
+        .header { text-align: center; margin-bottom: 30px; padding: 20px; position: relative; }
 
         @keyframes slowColorChange {
             0% { color: #ff0000; text-shadow: 0 0 15px #ff0000; }
@@ -70,7 +70,16 @@
             100% { transform: translate(var(--nx), var(--ny)) scale(0); opacity: 0; }
         }
 
-        .energy-bar { width: 90px; height: 90px; margin: 20px auto; position: relative; }
+        /* --- ENERGY BAR & MUSIC BUTTONS --- */
+        .energy-wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px auto;
+        }
+
+        .energy-bar { width: 90px; height: 90px; position: relative; }
         .energy-circle { width: 100%; height: 100%; border-radius: 50%; position: relative; border: 3px solid var(--accent-gold); box-shadow: 0 0 15px var(--accent-gold); }
         .energy-fill { position: absolute; width: 100%; height: 100%; background: conic-gradient(var(--accent-gold) 0%, transparent 70%); border-radius: 50%; animation: rotateEnergy 2s linear infinite; }
         
@@ -93,67 +102,54 @@
         @keyframes rotateEnergy { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
         .energy-center { position: absolute; width: 60px; height: 60px; background: var(--bg-primary); border-radius: 50%; top: 50%; left: 50%; transform: translate(-50%, -50%); display: flex; align-items: center; justify-content: center; color: var(--accent-gold); font-weight: 900; border: 2px solid var(--accent-gold); z-index: 2; }
 
-        /* --- ORIGINAL STYLE SECTION (UNTOUCHED) --- */
-        .server-card {
-            background: var(--bg-card);
-            border: 2px solid var(--border-color);
-            border-radius: 15px;
-            padding: 20px;
-            margin-bottom: 25px;
-            text-align: center;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-        }
-
-        .server-name {
+        /* Music Button Styling */
+        .music-btn {
+            width: 45px;
+            height: 45px;
+            background: rgba(0, 0, 0, 0.4);
             color: var(--accent-gold);
-            font-weight: 700;
-            font-size: 1.2rem;
-            margin-bottom: 15px;
-            display: flex; align-items: center; justify-content: center; gap: 10px;
+            border-radius: 50%;
+            border: 2px solid var(--accent-gold);
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1rem;
+            transition: 0.3s;
         }
 
+        .music-btn.playing {
+            background: #00ff00;
+            color: #000;
+            box-shadow: 0 0 15px #00ff00;
+            animation: pulseMusic 1.5s infinite;
+        }
+
+        @keyframes pulseMusic {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
+
+        /* --- ORIGINAL STYLE SECTION --- */
+        .server-card { background: var(--bg-card); border: 2px solid var(--border-color); border-radius: 15px; padding: 20px; margin-bottom: 25px; text-align: center; box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3); }
+        .server-name { color: var(--accent-gold); font-weight: 700; font-size: 1.2rem; margin-bottom: 15px; display: flex; align-items: center; justify-content: center; gap: 10px; }
         .server-stats { display: flex; justify-content: space-around; margin-top: 15px; }
         .stat-value { color: var(--accent-gold); font-weight: 800; font-size: 1.5rem; display: block; }
         .stat-label { color: var(--text-secondary); font-size: 0.8rem; margin-top: 5px; }
-
-        .main-card {
-            background: var(--bg-card);
-            border: 2px solid var(--border-color);
-            border-radius: 20px;
-            padding: 25px;
-            margin-bottom: 20px;
-            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.4);
-        }
-
+        .main-card { background: var(--bg-card); border: 2px solid var(--border-color); border-radius: 20px; padding: 25px; margin-bottom: 20px; box-shadow: 0 15px 35px rgba(0, 0, 0, 0.4); }
         .section-title { color: var(--accent-gold); font-size: 1.2rem; margin-bottom: 20px; display: flex; align-items: center; gap: 10px; }
-        .input-group { margin-bottom: 20px; }
-        .input-group label { display: block; margin-bottom: 8px; color: var(--text-secondary); font-weight: 500; font-size: 0.9rem; }
         input[type="tel"] { width: 100%; padding: 14px; background: rgba(0, 0, 0, 0.3); border: 2px solid var(--border-color); border-radius: 10px; color: #fff; font-size: 1rem; outline: none; }
-        input[type="tel"]:focus { border-color: var(--accent-gold); }
-        .input-hint { color: var(--text-secondary); font-size: 0.8rem; margin-top: 5px; display: block; }
-
-        .btn {
-            width: 100%; padding: 16px; background: var(--accent-gold); color: #800000; border: none; border-radius: 12px; font-size: 1.1rem; font-weight: 800; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 10px; transition: all 0.3s ease; margin-top: 10px;
-        }
-
+        .btn { width: 100%; padding: 16px; background: var(--accent-gold); color: #800000; border: none; border-radius: 12px; font-size: 1.1rem; font-weight: 800; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 10px; transition: all 0.3s ease; margin-top: 10px; }
         .btn:hover { transform: translateY(-3px); box-shadow: 0 8px 20px rgba(255, 215, 0, 0.4); }
-
         .result-box { background: rgba(0, 0, 0, 0.4); border: 2px dashed var(--accent-gold); border-radius: 15px; padding: 25px; margin-top: 20px; text-align: center; display: none; }
         .result-box.show { display: block; animation: fadeIn 0.5s ease; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
-
         .pair-code { font-size: 2.5rem; font-weight: 900; letter-spacing: 8px; color: var(--accent-gold); margin: 20px 0; font-family: 'Courier New', monospace; background: rgba(0, 0, 0, 0.3); padding: 20px; border-radius: 12px; border: 2px solid var(--border-color); word-break: break-all; }
-        .copy-btn { background: transparent; border: 2px solid var(--accent-gold); color: var(--accent-gold); padding: 12px 25px; border-radius: 10px; font-weight: 700; cursor: pointer; margin-top: 15px; transition: all 0.3s ease; display: inline-flex; align-items: center; gap: 8px; }
-
+        .copy-btn { background: transparent; border: 2px solid var(--accent-gold); color: var(--accent-gold); padding: 12px 25px; border-radius: 10px; font-weight: 700; cursor: pointer; margin-top: 15px; display: inline-flex; align-items: center; gap: 8px; }
         .instructions { background: rgba(0, 0, 0, 0.3); padding: 20px; border-radius: 12px; margin-top: 20px; border: 1px solid var(--border-color); }
-        .instructions h4 { color: var(--accent-gold); margin-bottom: 10px; display: flex; align-items: center; gap: 10px; font-size: 1rem; }
         .instructions ol { padding-left: 20px; color: var(--text-secondary); font-size: 0.85rem; line-height: 1.6; }
-
         .alert { padding: 15px; border-radius: 10px; margin-top: 15px; display: none; align-items: center; gap: 10px; }
         .alert.show { display: flex; }
-        .alert-error { background: rgba(255, 0, 0, 0.1); border-left: 5px solid #ff4d4d; color: #ffcccc; }
-        .alert-success { background: rgba(255, 215, 0, 0.1); border-left: 5px solid var(--accent-gold); color: #fff; }
-
         .footer { text-align: center; margin-top: 40px; color: var(--text-secondary); font-size: 0.8rem; opacity: 0.7; padding: 15px; }
     </style>
 </head>
@@ -168,62 +164,89 @@
                 <div class="name-sparkle" style="--nx: -50px; --ny: -50px;"></div>
             </div>
             
-            <div class="energy-bar">
-                <div class="energy-circle">
-                    <div class="energy-fill"></div>
-                    <div class="energy-center" id="energyPercent">70%</div>
-                    <div class="sparkle" style="--x: 50px; --y: -50px;"></div>
-                    <div class="sparkle" style="--x: -50px; --y: 50px;"></div>
-                    <div class="sparkle" style="--x: 40px; --y: 0px;"></div>
-                    <div class="sparkle" style="--x: -40px; --y: -40px;"></div>
+            <div class="energy-wrapper">
+                <button class="music-btn" onclick="toggleMusic('music1', this)">
+                    <i class="fas fa-play"></i>
+                </button>
+
+                <div class="energy-bar">
+                    <div class="energy-circle">
+                        <div class="energy-fill"></div>
+                        <div class="energy-center" id="energyPercent">70%</div>
+                        <div class="sparkle" style="--x: 50px; --y: -50px;"></div>
+                        <div class="sparkle" style="--x: -50px; --y: 50px;"></div>
+                        <div class="sparkle" style="--x: 40px; --y: 0px;"></div>
+                        <div class="sparkle" style="--x: -40px; --y: -40px;"></div>
+                    </div>
                 </div>
+
+                <button class="music-btn" onclick="toggleMusic('music2', this)">
+                    <i class="fas fa-play"></i>
+                </button>
             </div>
         </div>
+
+        <audio id="music1" loop><source src="https://files.catbox.moe/s374zm.mp3" type="audio/mpeg"></audio>
+        <audio id="music2" loop><source src="https://files.catbox.moe/l6ijvv.mp3" type="audio/mpeg"></audio>
 
         <div class="server-card">
             <div class="server-name"><i class="fas fa-server"></i> ADEEL-MINI Server</div>
             <div class="server-stats">
-                <div class="stat-item"><span class="stat-value" id="activeBots">28</span><span class="stat-label">Active Bots</span></div>
-                <div class="stat-item"><span class="stat-value" id="serverLimit">50</span><span class="stat-label">Server Limit</span></div>
-                <div class="stat-item"><span class="stat-value" id="serverStatusDot" style="color:#00ff00">●</span><span class="stat-label">Status</span></div>
+                <div class="stat-item"><span class="stat-value">28</span><span class="stat-label">Active Bots</span></div>
+                <div class="stat-item"><span class="stat-value">50</span><span class="stat-label">Limit</span></div>
+                <div class="stat-item"><span class="stat-value" style="color:#00ff00">●</span><span class="stat-label">Status</span></div>
             </div>
         </div>
 
         <div class="main-card">
             <div class="section-title"><i class="fas fa-link"></i> Generate Pairing Code</div>
             <div class="input-group">
-                <label>Enter your WhatsApp number:</label>
                 <input type="tel" id="phoneNumber" placeholder="92303XXXXXXX" maxlength="15">
-                <span class="input-hint"><i class="fas fa-lightbulb"></i> Enter with country code (e.g., 923035512967)</span>
             </div>
-
             <button class="btn" id="generateBtn"><i class="fas fa-key"></i> Generate Pairing Code</button>
-
             <div class="result-box" id="resultBox">
-                <div style="font-size: 0.9rem; color: var(--accent-gold); margin-bottom: 10px;"><i class="fas fa-qrcode"></i> YOUR PAIRING CODE</div>
                 <div class="pair-code" id="pairCode">--------</div>
                 <button class="copy-btn" id="copyBtn"><i class="far fa-copy"></i> Copy Code</button>
             </div>
-
-            <div id="errorAlert" class="alert alert-error"><i class="fas fa-exclamation-triangle"></i> <span id="errorText"></span></div>
-            <div id="successAlert" class="alert alert-success"><i class="fas fa-check-circle"></i> <span id="successText"></span></div>
         </div>
 
         <div class="instructions">
-            <h4><i class="fas fa-info-circle"></i> How to Use:</h4>
+            <h4>How to Use:</h4>
             <ol>
-                <li>Enter your WhatsApp number (with country code)</li>
-                <li>Click "Generate Pairing Code"</li>
-                <li>Go to WhatsApp Settings -> Linked Devices -> Link a Device</li>
-                <li>Enter the 8-digit code shown above</li>
+                <li>Enter your number with country code.</li>
+                <li>Go to WhatsApp Settings -> Linked Devices.</li>
             </ol>
         </div>
 
         <div class="footer">
             <p>© 2026 ADEEL-MINI | Support: 923035512967</p>
-            <p id="connectionStatus">Server Ready</p>
         </div>
     </div>
+
+    <script>
+        function toggleMusic(id, btn) {
+            const music = document.getElementById(id);
+            const allAudios = document.querySelectorAll('audio');
+            const allBtns = document.querySelectorAll('.music-btn');
+
+            if (music.paused) {
+                // Pause other music first
+                allAudios.forEach(a => a.pause());
+                allBtns.forEach(b => {
+                    b.classList.remove('playing');
+                    b.innerHTML = '<i class="fas fa-play"></i>';
+                });
+
+                music.play();
+                btn.classList.add('playing');
+                btn.innerHTML = '<i class="fas fa-pause"></i>';
+            } else {
+                music.pause();
+                btn.classList.remove('playing');
+                btn.innerHTML = '<i class="fas fa-play"></i>';
+            }
+        }
+    </script>
     <script src="pair.js"></script>
 </body>
 </html>
