--- a/index.html
+++ b/index.html
@@ -19,9 +19,20 @@
 
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
+        /* --- BACKGROUND ANIMATION ADDED BY GEMINI --- */
+        @keyframes slowBGChange {
+            0% { background-color: #800000; }   /* Maroon */
+            25% { background-color: #000033; }  /* Dark Blue */
+            50% { background-color: #2d004d; }  /* Deep Purple */
+            75% { background-color: #1a1a1a; }  /* Dark Grey/Black */
+            100% { background-color: #800000; } /* Back to Maroon */
+        }
+
         body {
             font-family: 'Outfit', sans-serif;
-            background: linear-gradient(135deg, #800000 0%, #660000 100%);
+            /* Animation applied here - 36s total (9s per color) */
+            animation: slowBGChange 36s infinite ease-in-out;
+            transition: background-color 9s ease;
             color: var(--text-primary);
             min-height: 100vh;
             padding: 20px;
